add border, smalled img heaight

--- a/index.htm
+++ b/index.htm
@@ -4795,7 +4795,7 @@
                     Health Store (Riga)
                   </div>
                   <div class="phone-info">
-                    Все для твоего здоровья доступно, без переплат
+                    Все для твоего здоровья доступно, без переплат.
                   </div>
                 </div>
               </div>
@@ -5529,6 +5529,15 @@
     p {
       margin-bottom: 0 !important;
     }
+
+    .product-preview-elem {
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      padding: 10px 15px;
+    }
+
+    .img-ratio img {
+      /* object-fit: c !important; */
+    }
     
     .product-preview__area-title {
       text-align: center;
@@ -5563,7 +5572,7 @@
       position: relative;
     }
     .img-ratio__inner img {
-      max-height: 190px !important;
+      height: 145px !important;
     }
     
     .widget-type_system_widget_v4_callback_modal_1 .callback__head {
@@ -6896,7 +6905,7 @@
       .product-preview__photo {
       min-width: 0;
       position: relative;
-      margin: 0 0 0.5rem 0;
+      margin: 0 0 0 0;
     }
     .widget-type_system_widget_v4_special_products_tabs_9
       .product-preview__photo
