add hover for product

--- a/index.htm
+++ b/index.htm
@@ -5533,6 +5533,11 @@
     .product-preview-elem {
       border: 1px solid rgba(0, 0, 0, 0.2);
       padding: 10px 15px;
+      transition: all 0.4s ease 0s;
+    }
+
+    .product-preview-elem:hover {
+      box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.3);
     }
 
     .img-ratio img {
