--- a/index.htm
+++ b/index.htm
@@ -406,19 +406,19 @@
                   />
                   <source
                     media="(max-width:480px)"
-                    data-srcset="https://static.insales-cdn.com/r/OHZgsTnijxc/rs:fit:640:0:1/q:100/plain/files/1/6452/21141812/original/AdobeStock_319194791.jpeg@webp"
+                    data-srcset="img/banner/1.jpg"
                     type="image/webp"
                     class="lazyload"
                   />
                   <source
                     media="(max-width:768px)"
-                    data-srcset="https://static.insales-cdn.com/r/AlrWayvBBIg/rs:fit:768:0:1/q:100/plain/files/1/6452/21141812/original/AdobeStock_319194791.jpeg@webp"
+                    data-srcset="img/banner/1.jpg"
                     type="image/webp"
                     class="lazyload"
                   />
 
                   <img
-                    data-src="https://static.insales-cdn.com/r/5_eqlNOjphw/rs:fit:1408:0:1/q:100/plain/files/1/6452/21141812/original/AdobeStock_319194791.jpeg"
+                    data-src="img/banner/1.jpg"
                     class="lazyload"
                   />
                 </picture>
@@ -564,18 +564,18 @@
                         <picture>
                           <source
                             media="(min-width:768px)"
-                            data-srcset="https://static.insales-cdn.com/r/9Dbu-LU4yo4/rs:fit:250:0:1/q:100/plain/files/1/3456/21728640/original/IMG_6670.jpg@webp"
+                            data-srcset="img/categories/4.webp"
                             type="image/webp"
                             class="lazyload"
                           />
                           <source
                             media="(max-width:767px)"
-                            data-srcset="https://static.insales-cdn.com/r/Q0TGXoUzNLs/rs:fit:100:0:1/q:100/plain/files/1/3456/21728640/original/IMG_6670.jpg@webp"
+                            data-srcset="img/categories/4.webp"
                             type="image/webp"
                             class="lazyload"
                           />
                           <img
-                            data-src="https://static.insales-cdn.com/r/qU0ilts-3Us/rs:fit:250:0:1/q:100/plain/files/1/3456/21728640/original/IMG_6670.jpg"
+                            data-src="img/categories/4.webp"
                             class="lazyload"
                           />
                         </picture>
@@ -592,18 +592,18 @@
                         <picture>
                           <source
                             media="(min-width:768px)"
-                            data-srcset="https://static.insales-cdn.com/r/CuPFJrfGLgg/rs:fit:250:0:1/q:100/plain/files/1/7756/24878668/original/Frame_1.jpg@webp"
+                            data-srcset="img/categories/5.jpg"
                             type="image/webp"
                             class="lazyload"
                           />
                           <source
                             media="(max-width:767px)"
-                            data-srcset="https://static.insales-cdn.com/r/E-Ishf1g7Ic/rs:fit:100:0:1/q:100/plain/files/1/7756/24878668/original/Frame_1.jpg@webp"
+                            data-srcset="img/categories/5.jpg"
                             type="image/webp"
                             class="lazyload"
                           />
                           <img
-                            data-src="https://static.insales-cdn.com/r/sF3a_e6uaIE/rs:fit:250:0:1/q:100/plain/files/1/7756/24878668/original/Frame_1.jpg"
+                            data-src="img/categories/5.jpg"
                             class="lazyload"
                           />
                         </picture>
