--- a/index.htm
+++ b/index.htm
@@ -400,7 +400,7 @@
                 <picture>
                   <source
                     media="(min-width:769px)"
-                    data-srcset="https://static.insales-cdn.com/r/n9jRu97mEjk/rs:fit:1408:0:1/q:100/plain/files/1/6452/21141812/original/AdobeStock_319194791.jpeg@webp"
+                    data-srcset="img/banner/1.jpg"
                     type="image/webp"
                     class="lazyload"
                   />
