add main banner, change product footer

--- a/index.htm
+++ b/index.htm
@@ -400,30 +400,30 @@
                 <picture>
                   <source
                     media="(min-width:769px)"
-                    data-srcset="img/banner/1.jpg"
+                    data-srcset="img/banner/1.png"
                     type="image/webp"
                     class="lazyload"
                   />
                   <source
                     media="(max-width:480px)"
-                    data-srcset="img/banner/1.jpg"
+                    data-srcset="img/banner/1.png"
                     type="image/webp"
                     class="lazyload"
                   />
                   <source
                     media="(max-width:768px)"
-                    data-srcset="img/banner/1.jpg"
+                    data-srcset="img/banner/1.png"
                     type="image/webp"
                     class="lazyload"
                   />
 
                   <img
-                    data-src="img/banner/1.jpg"
+                    data-src="img/banner/1.png"
                     class="lazyload"
                   />
                 </picture>
               </div>
-              <div class="banner-list__item-text">
+              <div style="opacity: 0;" class="banner-list__item-text">
                 <div class="banner-list__item-title h2"></div>
                 <div class="banner-list__item-content">
                   <p><strong>Лучшие средства</strong></p>
