--- a/product/product.html
+++ b/product/product.html
@@ -1756,7 +1756,10 @@
               <div class="footer__area-contacts">
                 <div class="footer__wrap">
                   <div class="phone-info">
-                    Натуральная косметика Styx Naturcosmetic
+                    Health Store (Riga)
+                  </div>
+                  <div class="phone-info">
+                    Все для твоего здоровья доступно, без переплат.
                   </div>
                 </div>
               </div>
@@ -1770,16 +1773,6 @@
                 </div>
 
                 <div class="pay-img-item">
-                  <img src="../files/1/1312/14550304/original/mir-logo_1.svg" />
-                </div>
-
-                <div class="pay-img-item">
-                  <img
-                    src="../files/1/7521/19922273/original/%D0%A1%D0%91%D0%9F_%D0%BB%D0%BE%D0%B3%D0%BE%D1%82%D0%B8%D0%BF.png"
-                  />
-                </div>
-
-                <div class="pay-img-item">
                   <img src="" />
                 </div>
 
@@ -1792,8 +1785,8 @@
                 </div>
               </div>
 
-              <div class="footer__area-logo">
-                <a href="../index.htm" class="footer__logo">
+              <!-- <div class="footer__area-logo">
+                <a href="index.htm" class="footer__logo">
                   <link rel="preconnect" href="https://fonts.googleapis.com" />
                   <link
                     rel="preconnect"
@@ -1801,7 +1794,7 @@
                     crossorigin=""
                   />
                   <link
-                    href="../css2?family=Montserrat:wght@600&display=swap"
+                    href="css2?family=Montserrat:wght@600&display=swap"
                     rel="stylesheet"
                   />
 
@@ -1841,20 +1834,18 @@
                     </foreignobject>
                   </svg>
                 </a>
-              </div>
+              </div> -->
               <div class="footer_copyright">
+                <div class="footer__wrap">
+                  Точки выдачи заказов: 
+                </div>
+                <p><a href="https://goo.gl/maps/DNmtjrK46RDiRiPq6">Slokas 52 (Riga)</a></p>
                 <p>
-                  <a href="../page/gdpr.html">Политика конфиденциальности</a>
-                </p>
-                <p>
-                  <a href="../page/agreement.html"
-                    >Пользовательское соглашение</a
-                  >
+                  <a href="https://goo.gl/maps/b2Ke5sVrsYu35ox6A">Arena Riga (Riga)</a>
                 </p>
                 <p>&nbsp;</p>
-                <p>ИП Можов Александр Сергеевич</p>
-                <p>г. Москва, ул. Маршала Рыбалко, д. 2 корпус 6</p>
-                <p>ИНН 772973524888 ОГРНИП 320774600165696</p>
+                <p><a href="tel:+37126858674">Tel. +371 26858674</a></p>
+                <p>(Whats App/Telegram)</p>
               </div>
             </div>
           </div>
