--- a/product/product.html
+++ b/product/product.html
@@ -56,8 +56,7 @@
     <!-- meta -->
     <meta charset="UTF-8" />
     <title>
-      Alan Hadash Кондиционер для окрашенных волос Brazilian MuruMuru, 200мл -
-      купить по выгодной цене | Mio-cosmetics.ru
+      Triphala (Unifarma) Добовка для пищеварения
     </title>
     <meta
       name="description"
