--- a/index.htm
+++ b/index.htm
@@ -387,7 +387,7 @@
             --banner-pb: 4vw;
             --layout-wide-bg: true;
             --layout-pt: 2vw;
-            --layout-pb: 2vw;
+            --layout-pb: 1.5vw;
             --layout-wide-content: false;
             --layout-edge: false;
             --hide-desktop: false;
@@ -470,7 +470,7 @@
             --display-property-color: text;
             --hide-mobile-modal-variants: false;
             --layout-wide-bg: true;
-            --layout-pt: 3vw;
+            --layout-pt: 1.5vw;
             --layout-pb: 3vw;
             --layout-wide-content: false;
             --layout-edge: false;
@@ -6282,7 +6282,7 @@
                     Health Store (Riga)
                   </div>
                   <div class="phone-info">
-                    Все для твоего здоровья доступно, без переплат.
+                    Health Store - все для вашего здоровья доступно, без переплат.
                   </div>
                 </div>
               </div>
