--- a/product/product.html
+++ b/product/product.html
@@ -2446,7 +2446,7 @@
                     Health Store (Riga)
                   </div>
                   <div class="phone-info">
-                    Все для твоего здоровья доступно, без переплат.
+                    Health Store - все для вашего здоровья доступно, без переплат.
                   </div>
                 </div>
               </div>
