add individual page for product

--- a/index.htm
+++ b/index.htm
@@ -97,6 +97,7 @@
       }
     </style>
   <script src="./assets/js/products-view.js"></script>  
+  <script src="./assets/js/numberToJson.js"></script>  
   </head>
   <body data-multi-lang="false">
     <noscript>
