add descr for products

--- a/product/product.html
+++ b/product/product.html
@@ -2146,6 +2146,10 @@
       margin-bottom: 0 !important;
     }
 
+    .product__description-content p:not(:last-child) { 
+      margin-bottom: 6px !important;
+    }
+
     .product-preview__area-title {
       text-align: center;
     }
