--- a/product/product.html
+++ b/product/product.html
@@ -2146,6 +2146,15 @@
       margin-bottom: 0 !important;
     }
 
+    .button {
+      background: #25a033;
+      transition: all 0.4s ease 0s;
+    }
+
+    .button:hover {
+      background: #115c1a;
+    }
+
     .product__description-content p:not(:last-child) { 
       margin-bottom: 6px !important;
     }
@@ -5363,7 +5372,14 @@
       font-weight: 600;
       cursor: pointer;
       text-decoration: none;
+      color: #25a033;
+      transition: all 0.3s ease 0s;
     }
+
+    .widget-type_system_widget_v4_product_4 .cut-block__controls-link:hover {
+      color: #187423;
+    }
+
     .widget-type_system_widget_v4_product_4 .favorites_btn,
     .widget-type_system_widget_v4_product_4 .favorites_btn:hover {
       background: var(--bg-minor-shade);
