add cart, fixed products bug

--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
     <meta name="default-locale" content="ru" />
     <meta name="insales-redefined-api-methods" content="[]" />
     <!--InsalesCounter -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       if (typeof __id == "undefined") {
         var __id = 643530;
 
@@ -45,19 +45,21 @@
           s.parentNode.insertBefore(ic, s);
         })();
       }
-    </script>
+    </script> -->
     <!-- /InsalesCounter -->
 
     <!-- meta -->
     <meta charset="UTF-8" />
     <title>
-      Mio-Cosmetics - натуральная косметика! Уход за лицом, уход за телом, уход
-      за волосами, ароматерапия.
+      HEALTH STORE
     </title>
+
+    <script src="./assets/js/products-view.js"></script>  
+    <!-- <script src="./assets/js/numberToJson.js"></script>   -->
+
     <meta
       name="description"
-      content="Mio-Cosmetics - интернет магазин натуральной косметики.Оплата картой и наличными курьеру. Патчи, сыворотки, уход за кожей лица, очищающие маски. 
-Лучшие бренды с быстрой доставкой по всей России. Styx Naturcosmetic. Товар сертифицирован."
+      content="#"
     />
     <meta
       data-config='{"static-versioned": "1.38"}'
@@ -96,8 +98,7 @@
         }
       }
     </style>
-  <script src="./assets/js/products-view.js"></script>  
-  <script src="./assets/js/numberToJson.js"></script>  
+
   </head>
   <body data-multi-lang="false">
     <noscript>
@@ -973,6 +974,8 @@
         </div>
       </footer>
     </div>
+
+
     <div class="outside-widgets">
       <div
         class="layout widget-type_system_widget_v4_callback_modal_1"
