--- a/cart_items.html
+++ b/cart_items.html
@@ -62,6 +62,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
     <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" href="./assets/css/cart.css">
 
     <!-- canonical url-->
 
@@ -362,9 +363,47 @@
           "
         >
           <div class="layout__content">
-            <h1 class="heading">Корзина</h1>
-
-            <div class="text-center js-cart-empty">Ваша корзина пуста</div>
+            <div class="cart-null">
+              <h1 class="heading">Корзина</h1>
+              <!-- <div class="text-center js-cart-empty">Ваша корзина пуста</div> -->
+            </div>
+            <div id="checkout" class="checkout">
+              <div class="checkout__info checkout-grid">
+                <div class="checkout__info-item">Название</div>
+                <div class="checkout__info-item">Количество</div>
+                <div class="checkout__info-item">Цена</div>
+              </div>
+              <div id="cards-wrap" class="checkout__cards">
+                <div class="checkout__cart cart-checkout checkout-grid">
+                  <div class="cart-checkout__name">
+                    <div class="cart-checkout__exit">
+                      <img src="./img/exit.jpg" alt="Выкитуть с корзины">
+                    </div>
+                    <div class="cart-checkout__img">
+                      <img src="img/1.jfif" alt="">
+                    </div>
+                    <div class="cart-checkout__content">
+                      <div class="cart-checkout__title cart-checkout__text">Triphala (Unifarma)</div>
+                      <div class="cart-checkout__articul">
+                        <div>Артикул</div> 
+                        <span>No. 001</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="cart-checkout__count cart-checkout__text"><span>5</span> шт</div>
+                  <div class="cart-checkout__price cart-checkout__text"><span>780</span> руб</div>
+                </div>
+                
+              </div>
+              <div class="checkout__summa">
+                <div>Итого к оплате:</div>
+                <div class="checkout__summa-num"><span>1500</span> руб</div>
+              </div>
+              <div class="checkout__btns">
+                <a href="index.htm" class="checkout__btn button button_no-bg">Продолжить покупки</a>
+                <button type="button" class="checkout__btn button">Оформить заказ</button>
+              </div>
+            </div>
           </div>
         </div>
       </main>
@@ -1093,6 +1132,24 @@
     type="text/css"
   />
   <style>
+
+    .button {
+      background: #25a033;
+      transition: all 0.4s ease 0s;
+      font-size: 16px;
+    }
+
+    .button_no-bg {
+      color: #25a033;
+      background: transparent;
+      border: 1px solid #25a033;
+    }
+
+    .button:hover {
+      border: 1px solid #25a033;
+      background: #177e23;
+    }
+
     .widget-type_system_widget_v4_alerts .micro-alerts {
       display: none;
     }
