--- a/index.htm
+++ b/index.htm
@@ -1683,6 +1683,26 @@
       border: 1px solid rgba(0, 0, 0, 0.2);
       padding: 10px 15px;
       transition: all 0.4s ease 0s;
+      position: relative;
+    }
+
+    .product-preview-elem._sending {
+      pointer-events: none;
+    }
+
+    .product-preview-elem._sending::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 3;
+      background-color: rgba(0, 0, 0, 0.4);
+      background-image: url('./img/spinner.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 100px;
     }
 
     .product-preview-elem [hidden] {
