dislocated articul on prod page

--- a/product/product.html
+++ b/product/product.html
@@ -4232,10 +4232,10 @@
       display: inline-block;
     }
     .widget-type_system_widget_v4_product_4 .product .product-form {
-      display: grid;
-      grid-auto-flow: row;
-      grid-template-areas: "rating sku" "title title" "pric price" "variants-bundle variants-bundle" "controls controls" "short-description short-description";
-      grid-template-columns: 1fr max-content;
+      /* display: grid; */
+      /* grid-auto-flow: row; */
+      /* grid-template-areas: "rating sku" "title title" "pric price" "variants-bundle variants-bundle" "controls controls" "short-description short-description"; */
+      /* grid-template-columns: 1fr; */
     }
     .widget-type_system_widget_v4_product_4
       .product
@@ -4311,7 +4311,7 @@
     }
     .widget-type_system_widget_v4_product_4 .product__title {
       line-height: 1.2;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.9rem;
     }
     .widget-type_system_widget_v4_product_4 .product__variants select {
       display: none;
@@ -4627,7 +4627,7 @@
       }
     }
     .widget-type_system_widget_v4_product_4 .product__full-description {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       font-size: 1.125rem;
       line-height: 1.3;
     }
