--- a/index.htm
+++ b/index.htm
@@ -75,9 +75,9 @@
     <!-- canonical url-->
 
     <!-- rss feed-->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mio-cosmetics.ru" />
-    <meta property="og:title" content="Mio-cosmetics.ru" />
+    <!-- <meta property="og:type" content="website" /> -->
+    <!-- <meta property="og:url" content="https://mio-cosmetics.ru" /> -->
+    <!-- <meta property="og:title" content="Mio-cosmetics.ru" /> -->
 
     <!-- icons-->
     <link
@@ -116,7 +116,6 @@
         <div
           class="layout widget-type_system_widget_v4_header_11"
           style="
-            --logo-img: 'https://static.insales-cdn.com/files/1/5886/21419774/original/miologo_8330fee9de00433d2cc48f29227e8ec6.png';
             --logo-max-width: 120px;
             --hide-catalog: false;
             --hide-search: false;
@@ -361,7 +360,6 @@
         <div
           class="layout widget-type_system_widget_v4_page_banner_2"
           style="
-            --banner-img: 'https://static.insales-cdn.com/files/1/6452/21141812/original/AdobeStock_319194791.jpeg';
             --hide-button: false;
             --banner-overlay-color: #000000;
             --banner-overlay-color-is-dark: true;
@@ -883,8 +881,6 @@
             --hide-pay: false;
             --pay-img-1: 'https://static.insales-cdn.com/files/1/1311/14550303/original/Group.svg';
             --pay-img-2: 'https://static.insales-cdn.com/files/1/1305/14550297/original/Visa.svg';
-            --pay-img-3: 'https://static.insales-cdn.com/files/1/1312/14550304/original/mir-logo_1.svg';
-            --pay-img-4: 'https://static.insales-cdn.com/files/1/7521/19922273/original/СБП_логотип.png';
             --hide-social: false;
             --layout-wide-bg: true;
             --layout-pt: 1vw;
@@ -1450,36 +1446,7 @@
       </div>
     </div>
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-      (function (m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
-          function () {
-            (m[i].a = m[i].a || []).push(arguments);
-          };
-        m[i].l = 1 * new Date();
-        (k = e.createElement(t)),
-          (a = e.getElementsByTagName(t)[0]),
-          (k.async = 1),
-          (k.src = r),
-          a.parentNode.insertBefore(k, a);
-      })(
-        window,
-        document,
-        "script",
-        "https://mc.yandex.ru/metrika/tag.js",
-        "ym"
-      );
-
-      ym(52115380, "init", {
-        id: 52115380,
-        clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
-        webvisor: true,
-        ecommerce: "dataLayer",
-      });
-    </script>
+   
     <noscript
       ><div>
         <img
@@ -1490,7 +1457,7 @@
     ></noscript>
     <!-- /Yandex.Metrika counter -->
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -1501,12 +1468,12 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-TTS3XQB");
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
-    <script
+    <!-- <script
       type="text/javascript"
       src="served_assets/public/shop/referer_code.js"
-    ></script>
+    ></script> -->
     <!-- Google Analytics Enhanced Code -->
     <script type="text/javascript">
       (function (i, s, o, g, r, a, m) {
@@ -7573,7 +7540,7 @@
           '"'
       );
     }
-  </script>
+  </script> 
 
   <meta name="font-static-version" content="2.71" />
   <meta
