--- a/index.htm
+++ b/index.htm
@@ -31,22 +31,7 @@
     <meta name="js-evnvironment" content="production" />
     <meta name="default-locale" content="ru" />
     <meta name="insales-redefined-api-methods" content="[]" />
-    <!--InsalesCounter -->
-    <!-- <script type="text/javascript">
-      if (typeof __id == "undefined") {
-        var __id = 643530;
-
-        (function () {
-          var ic = document.createElement("script");
-          ic.type = "text/javascript";
-          ic.async = true;
-          ic.src = "/javascripts/insales_counter.js?6";
-          var s = document.getElementsByTagName("script")[0];
-          s.parentNode.insertBefore(ic, s);
-        })();
-      }
-    </script> -->
-    <!-- /InsalesCounter -->
+    
 
     <!-- meta -->
     <meta charset="UTF-8" />
@@ -55,7 +40,6 @@
     </title>
 
     <script src="./assets/js/products-view.js"></script>  
-    <!-- <script src="./assets/js/numberToJson.js"></script>   -->
 
     <meta
       name="description"
@@ -163,7 +147,7 @@
                       alt="Health store"
                       title="Health store"
                     />
-                  </ф>
+                  </a>
                 </div>
 
                 <div class="header__area-controls">
@@ -1455,85 +1439,7 @@
           alt=""
         /></div
     ></noscript>
-    <!-- /Yandex.Metrika counter -->
-    <!-- Google Tag Manager -->
-    <!-- <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TTS3XQB");
-    </script> -->
-    <!-- End Google Tag Manager -->
-    <!-- <script
-      type="text/javascript"
-      src="served_assets/public/shop/referer_code.js"
-    ></script> -->
-    <!-- Google Analytics Enhanced Code -->
-    <script type="text/javascript">
-      (function (i, s, o, g, r, a, m) {
-        i["GoogleAnalyticsObject"] = r;
-        (i[r] =
-          i[r] ||
-          function () {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        "script",
-        "//www.google-analytics.com/analytics.js",
-        "ga"
-      );
-
-      ga("create", "UA-133581375-2");
-
-      ga("send", "pageview");
-    </script>
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-      (function (m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
-          function () {
-            (m[i].a = m[i].a || []).push(arguments);
-          };
-        m[i].l = 1 * new Date();
-        (k = e.createElement(t)),
-          (a = e.getElementsByTagName(t)[0]),
-          (k.async = 1),
-          (k.src = r),
-          a.parentNode.insertBefore(k, a);
-      })(
-        window,
-        document,
-        "script",
-        "https://mc.yandex.ru/metrika/tag.js",
-        "ym"
-      );
-
-      ym(52115380, "init", {
-        clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
-        webvisor: true,
-        ecommerce: "dataLayer",
-      });
-    </script>
-    <script type="text/javascript">
-      window.dataLayer = window.dataLayer || [];
-      window.dataLayer.push({});
-    </script>
+    
     <noscript
       ><div>
         <img
@@ -1545,15 +1451,15 @@
     <!-- /Yandex.Metrika counter -->
   </body>
 
-  <script src="assets/common-js/common.v2.23.34.js"></script>
-  <script src="assets/static-versioned/2.77/static/libs/my-layout/1.0.0/my-layout.js"></script>
+  <!-- <script src="assets/common-js/common.v2.23.34.js"></script> -->
+  <!-- <script src="assets/static-versioned/2.77/static/libs/my-layout/1.0.0/my-layout.js"></script> -->
   <link
     href="assets/static-versioned/2.90/static/libs/my-layout/1.0.0/core-css.css"
     rel="stylesheet"
     type="text/css"
   />
   <script src="assets/static-versioned/1.26/static/libs/jquery/3.5.1/jquery-3.5.1.min.js"></script>
-  <script src="assets/static-versioned/2.38/static/libs/splide/3.6.9/js/splide.min.js"></script>
+  <!-- <script src="assets/static-versioned/2.38/static/libs/splide/3.6.9/js/splide.min.js"></script> -->
   <link
     href="assets/static-versioned/2.38/static/libs/splide/3.6.9/css/splide.min.css"
     rel="stylesheet"
@@ -1571,15 +1477,15 @@
     rel="stylesheet"
     type="text/css"
   />
-  <script src="assets/static-versioned/1.32/static/libs/js-cookie/3.0.0/js.cookie.min.js"></script>
+  <!-- <script src="assets/static-versioned/1.32/static/libs/js-cookie/3.0.0/js.cookie.min.js"></script> -->
   <script src="assets/static-versioned/1.26/static/libs/vanilla-lazyload/17.3.0/lazyload.min.js"></script>
-  <script src="assets/static-versioned/1.90/static/libs/microalert/0.1.0/microAlert.js"></script>
+  <!-- <script src="assets/static-versioned/1.90/static/libs/microalert/0.1.0/microAlert.js"></script> -->
   <link
     href="assets/static-versioned/1.90/static/libs/microalert/0.1.0/microAlert.css"
     rel="stylesheet"
     type="text/css"
   />
-  <script src="assets/static-versioned/1.26/static/libs/fslightbox/3.2.2/fslightbox.js"></script>
+  <!-- <script src="assets/static-versioned/1.26/static/libs/fslightbox/3.2.2/fslightbox.js"></script> -->
   <style>
     p {
       margin-bottom: 0 !important;
@@ -7599,8 +7505,8 @@
   />
   <script src="assets/js/tabs.js"></script>
 
-  <script
+  <!-- <script
     src="assets/1/4596/1913332/1670506416/theme.js"
     charset="utf-8"
-  ></script>
+  ></script> -->
 </html>
