--- a/index.htm
+++ b/index.htm
@@ -1431,7 +1431,7 @@
     </div>
     <!-- Yandex.Metrika counter -->
    
-    <noscript
+    <!-- <noscript
       ><div>
         <img
           src="watch/52115380"
@@ -1447,12 +1447,12 @@
           style="position: absolute; left: -9999px"
           alt=""
         /></div
-    ></noscript>
+    ></noscript> -->
     <!-- /Yandex.Metrika counter -->
   </body>
 
-  <!-- <script src="assets/common-js/common.v2.23.34.js"></script> -->
-  <!-- <script src="assets/static-versioned/2.77/static/libs/my-layout/1.0.0/my-layout.js"></script> -->
+  <script src="assets/common-js/common.v2.23.34.js"></script>
+  <script src="assets/static-versioned/2.77/static/libs/my-layout/1.0.0/my-layout.js"></script>
   <link
     href="assets/static-versioned/2.90/static/libs/my-layout/1.0.0/core-css.css"
     rel="stylesheet"
@@ -1480,11 +1480,11 @@
   <!-- <script src="assets/static-versioned/1.32/static/libs/js-cookie/3.0.0/js.cookie.min.js"></script> -->
   <script src="assets/static-versioned/1.26/static/libs/vanilla-lazyload/17.3.0/lazyload.min.js"></script>
   <!-- <script src="assets/static-versioned/1.90/static/libs/microalert/0.1.0/microAlert.js"></script> -->
-  <link
+  <!-- <link
     href="assets/static-versioned/1.90/static/libs/microalert/0.1.0/microAlert.css"
     rel="stylesheet"
     type="text/css"
-  />
+  /> -->
   <!-- <script src="assets/static-versioned/1.26/static/libs/fslightbox/3.2.2/fslightbox.js"></script> -->
   <style>
     p {
@@ -7505,8 +7505,5 @@
   />
   <script src="assets/js/tabs.js"></script>
 
-  <!-- <script
-    src="assets/1/4596/1913332/1670506416/theme.js"
-    charset="utf-8"
-  ></script> -->
+  
 </html>
