--- a/product/product.html
+++ b/product/product.html
@@ -2146,6 +2146,21 @@
       margin-bottom: 0 !important;
     }
 
+    .cut-block__controls-link {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    .cut-block__controls-link img {
+      width: 13px;
+      margin-top: 3px;
+    }
+    .cut-block__controls-link._hide img {
+      margin-top: 0;
+      transform: rotate(180deg);
+    }
+
     .button {
       background: #25a033;
       transition: all 0.4s ease 0s;
