dislocated summa price

--- a/index.htm
+++ b/index.htm
@@ -1491,6 +1491,10 @@
       margin-bottom: 0 !important;
     }
 
+    .widget-type_system_widget_v4_special_products_tabs_9 .product-preview__photo img.lazyload {
+      visibility: visible !important;
+    }
+
     .tabs-prod__navigation {
       display: flex;
       align-items: center;
