--- a/index.htm
+++ b/index.htm
@@ -377,7 +377,7 @@
             <div class="banner-list__item">
               <div class="banner-list__item-image">
                 <picture>
-                  <source
+                  <!-- <source
                     media="(min-width:769px)"
                     data-srcset="img/banner/1.png"
                     type="image/webp"
@@ -394,10 +394,10 @@
                     data-srcset="img/banner/1.png"
                     type="image/webp"
                     class="lazyload"
-                  />
+                  /> -->
 
                   <img
-                    data-src="img/banner/1.png"
+                    src="img/banner/1.png"
                     class="lazyload"
                   />
                 </picture>
@@ -467,7 +467,7 @@
                   <button type="button" class="tabs-prod__title _tab-active">
                     <div class="tabs__head-item"> 
                       <picture>
-                        <source
+                        <!-- <source
                           media="(min-width:768px)"
                           data-srcset="img/categories/1.png"
                           type="image/webp"
@@ -478,9 +478,9 @@
                           data-srcset="img/categories/1.png"
                           type="image/webp"
                           class="lazyload"
-                        />
+                        /> -->
                         <img
-                          data-src="img/categories/1.png"
+                          src="img/categories/1.png"
                           class="lazyload"
                         />
                       </picture>
@@ -490,7 +490,7 @@
                   <button type="button" class="tabs-prod__title">
                     <div class="tabs__head-item">
                       <picture>
-                        <source
+                        <!-- <source
                           media="(min-width:768px)"
                           data-srcset="img/categories/2.png"
                           type="image/webp"
@@ -501,9 +501,9 @@
                           data-srcset="img/categories/2.png"
                           type="image/webp"
                           class="lazyload"
-                        />
+                        /> -->
                         <img
-                          data-src="img/categories/2.png"
+                          src="img/categories/2.png"
                           class="lazyload"
                         />
                       </picture>
@@ -513,7 +513,7 @@
                   <button type="button" class="tabs-prod__title">
                     <div class="tabs__head-item">
                       <picture>
-                        <source
+                        <!-- <source
                           media="(min-width:768px)"
                           data-srcset="img/categories/3.png"
                           type="image/webp"
@@ -524,9 +524,9 @@
                           data-srcset="img/categories/3.png"
                           type="image/webp"
                           class="lazyload"
-                        />
+                        /> -->
                         <img
-                          data-src="img/categories/3.png"
+                          src="img/categories/3.png"
                           class="lazyload"
                         />
                       </picture>
@@ -536,7 +536,7 @@
                   <button type="button" class="tabs-prod__title">
                     <div class="tabs__head-item">
                       <picture>
-                        <source
+                        <!-- <source
                           media="(min-width:768px)"
                           data-srcset="img/categories/4.jpg"
                           type="image/webp"
@@ -547,9 +547,9 @@
                           data-srcset="img/categories/4.jpg"
                           type="image/webp"
                           class="lazyload"
-                        />
+                        /> -->
                         <img
-                          data-src="img/categories/4.jpg"
+                          src="img/categories/4.jpg"
                           class="lazyload"
                         />
                       </picture>
@@ -559,7 +559,7 @@
                   <button type="button" class="tabs-prod__title">
                     <div class="tabs__head-item">
                       <picture>
-                        <source
+                        <!-- <source
                           media="(min-width:768px)"
                           data-srcset="img/categories/5.png"
                           type="image/webp"
@@ -570,9 +570,9 @@
                           data-srcset="img/categories/5.png"
                           type="image/webp"
                           class="lazyload"
-                        />
+                        /> -->
                         <img
-                          data-src="img/categories/5.png"
+                          src="img/categories/5.png"
                           class="lazyload"
                         />
                       </picture>
@@ -810,6 +810,7 @@
                   />
 
                   <img
+                    src="img/banner/2.png"
                     data-src="img/banner/2.png"
                     class="lazyload"
                   />
@@ -6272,7 +6273,7 @@
 
 
 
-  <script>
+  <!-- <script>
     try {
       let widget = ".widget-type_system_widget_v4_alerts";
       let $widget = $(".widget-type_system_widget_v4_alerts");
@@ -7452,7 +7453,7 @@
           '"'
       );
     }
-  </script> 
+  </script>  -->
 
   <meta name="font-static-version" content="2.71" />
   <meta
