--- a/index.htm
+++ b/index.htm
@@ -6273,7 +6273,7 @@
 
 
 
-  <!-- <script>
+  <script>
     try {
       let widget = ".widget-type_system_widget_v4_alerts";
       let $widget = $(".widget-type_system_widget_v4_alerts");
@@ -7453,7 +7453,7 @@
           '"'
       );
     }
-  </script>  -->
+  </script> 
 
   <meta name="font-static-version" content="2.71" />
   <meta
