fixed product btns bug

--- a/product/product4.html
+++ b/product/product4.html
@@ -7686,19 +7686,19 @@ id="4"
 
 
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const btns = document.querySelectorAll('.product-form__counters-btns button');
-      const addCartBtn = document.querySelector('.add-cart-counter');
-      const addCartBtnCount =  addCartBtn.querySelector('[data-add-cart-counter-count]');
+// window.addEventListener("load", () => {
+//       const btns = document.querySelectorAll('.product-form__counters-btns button');
+//       const addCartBtn = document.querySelector('.add-cart-counter');
+//       const addCartBtnCount =  addCartBtn.querySelector('[data-add-cart-counter-count]');
 
 
-      btns.forEach(btn => {
-        btn.addEventListener("click", e => {
-          addCartBtn.classList.add('is-add-cart');
-          addCartBtnCount.innerHTML = btn.dataset.num;
-        });
-      });
-    });
+//       btns.forEach(btn => {
+//         btn.addEventListener("click", e => {
+//           addCartBtn.classList.add('is-add-cart');
+//           addCartBtnCount.innerHTML = btn.dataset.num;
+//         });
+//       });
+//     });
 
   </script>
 
